// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkSpinner should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-spinner bpk-spinner--dark"
  >
    <svg
      aria-hidden="true"
      style="width: 1rem; height: 1rem;"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 7H1a1 1 0 000 2h2a1 1 0 000-2z"
        opacity=".45"
      />
      <path
        d="M15 7h-2a1 1 0 100 2h2a1 1 0 100-2z"
      />
      <path
        d="M7 13v2a1 1 0 102 0v-2a1 1 0 10-2 0z"
        opacity=".3"
      />
      <path
        d="M7 1v2a1 1 0 002 0V1a1 1 0 00-2 0z"
        opacity=".65"
      />
      <path
        d="M9.634 12.83l1 1.732a1 1 0 101.732-1l-1-1.732a1 1 0 00-1.732 1z"
        opacity=".25"
      />
      <path
        d="M3.634 2.438l1 1.732a1 1 0 101.732-1l-1-1.732a1 1 0 10-1.732 1z"
        opacity=".55"
      />
      <path
        d="M11.83 11.366l1.732 1a1 1 0 101-1.732l-1.732-1a1 1 0 10-1 1.732z"
        opacity=".2"
      />
      <path
        d="M1.438 5.366l1.732 1a1 1 0 101-1.732l-1.732-1a1 1 0 10-1 1.732z"
        opacity=".5"
      />
      <path
        d="M12.83 6.366l1.732-1a1 1 0 00-1-1.732l-1.732 1a1 1 0 001 1.732z"
        opacity=".85"
      />
      <path
        d="M2.438 12.366l1.732-1a1 1 0 10-1-1.732l-1.732 1a1 1 0 101 1.732z"
        opacity=".4"
      />
      <path
        d="M11.366 4.17l1-1.732a1 1 0 00-1.732-1l-1 1.732a1 1 0 001.732 1z"
        opacity=".75"
      />
      <path
        d="M5.366 14.562l1-1.732a1 1 0 10-1.732-1l-1 1.732a1 1 0 001.732 1z"
        opacity=".35"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`BpkSpinner should render correctly with a "alignToButton" attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-spinner bpk-spinner--dark bpk-spinner--align-to-button"
  >
    <svg
      aria-hidden="true"
      style="width: 1rem; height: 1rem;"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 7H1a1 1 0 000 2h2a1 1 0 000-2z"
        opacity=".45"
      />
      <path
        d="M15 7h-2a1 1 0 100 2h2a1 1 0 100-2z"
      />
      <path
        d="M7 13v2a1 1 0 102 0v-2a1 1 0 10-2 0z"
        opacity=".3"
      />
      <path
        d="M7 1v2a1 1 0 002 0V1a1 1 0 00-2 0z"
        opacity=".65"
      />
      <path
        d="M9.634 12.83l1 1.732a1 1 0 101.732-1l-1-1.732a1 1 0 00-1.732 1z"
        opacity=".25"
      />
      <path
        d="M3.634 2.438l1 1.732a1 1 0 101.732-1l-1-1.732a1 1 0 10-1.732 1z"
        opacity=".55"
      />
      <path
        d="M11.83 11.366l1.732 1a1 1 0 101-1.732l-1.732-1a1 1 0 10-1 1.732z"
        opacity=".2"
      />
      <path
        d="M1.438 5.366l1.732 1a1 1 0 101-1.732l-1.732-1a1 1 0 10-1 1.732z"
        opacity=".5"
      />
      <path
        d="M12.83 6.366l1.732-1a1 1 0 00-1-1.732l-1.732 1a1 1 0 001 1.732z"
        opacity=".85"
      />
      <path
        d="M2.438 12.366l1.732-1a1 1 0 10-1-1.732l-1.732 1a1 1 0 101 1.732z"
        opacity=".4"
      />
      <path
        d="M11.366 4.17l1-1.732a1 1 0 00-1.732-1l-1 1.732a1 1 0 001.732 1z"
        opacity=".75"
      />
      <path
        d="M5.366 14.562l1-1.732a1 1 0 10-1.732-1l-1 1.732a1 1 0 001.732 1z"
        opacity=".35"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`BpkSpinner should render correctly with a "className" attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-spinner bpk-spinner--dark my-custom-class"
  >
    <svg
      aria-hidden="true"
      style="width: 1rem; height: 1rem;"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 7H1a1 1 0 000 2h2a1 1 0 000-2z"
        opacity=".45"
      />
      <path
        d="M15 7h-2a1 1 0 100 2h2a1 1 0 100-2z"
      />
      <path
        d="M7 13v2a1 1 0 102 0v-2a1 1 0 10-2 0z"
        opacity=".3"
      />
      <path
        d="M7 1v2a1 1 0 002 0V1a1 1 0 00-2 0z"
        opacity=".65"
      />
      <path
        d="M9.634 12.83l1 1.732a1 1 0 101.732-1l-1-1.732a1 1 0 00-1.732 1z"
        opacity=".25"
      />
      <path
        d="M3.634 2.438l1 1.732a1 1 0 101.732-1l-1-1.732a1 1 0 10-1.732 1z"
        opacity=".55"
      />
      <path
        d="M11.83 11.366l1.732 1a1 1 0 101-1.732l-1.732-1a1 1 0 10-1 1.732z"
        opacity=".2"
      />
      <path
        d="M1.438 5.366l1.732 1a1 1 0 101-1.732l-1.732-1a1 1 0 10-1 1.732z"
        opacity=".5"
      />
      <path
        d="M12.83 6.366l1.732-1a1 1 0 00-1-1.732l-1.732 1a1 1 0 001 1.732z"
        opacity=".85"
      />
      <path
        d="M2.438 12.366l1.732-1a1 1 0 10-1-1.732l-1.732 1a1 1 0 101 1.732z"
        opacity=".4"
      />
      <path
        d="M11.366 4.17l1-1.732a1 1 0 00-1.732-1l-1 1.732a1 1 0 001.732 1z"
        opacity=".75"
      />
      <path
        d="M5.366 14.562l1-1.732a1 1 0 10-1.732-1l-1 1.732a1 1 0 001.732 1z"
        opacity=".35"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`BpkSpinner should render correctly with type as light 1`] = `
<DocumentFragment>
  <div
    class="bpk-spinner bpk-spinner--light"
  >
    <svg
      aria-hidden="true"
      style="width: 1rem; height: 1rem;"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 7H1a1 1 0 000 2h2a1 1 0 000-2z"
        opacity=".45"
      />
      <path
        d="M15 7h-2a1 1 0 100 2h2a1 1 0 100-2z"
      />
      <path
        d="M7 13v2a1 1 0 102 0v-2a1 1 0 10-2 0z"
        opacity=".3"
      />
      <path
        d="M7 1v2a1 1 0 002 0V1a1 1 0 00-2 0z"
        opacity=".65"
      />
      <path
        d="M9.634 12.83l1 1.732a1 1 0 101.732-1l-1-1.732a1 1 0 00-1.732 1z"
        opacity=".25"
      />
      <path
        d="M3.634 2.438l1 1.732a1 1 0 101.732-1l-1-1.732a1 1 0 10-1.732 1z"
        opacity=".55"
      />
      <path
        d="M11.83 11.366l1.732 1a1 1 0 101-1.732l-1.732-1a1 1 0 10-1 1.732z"
        opacity=".2"
      />
      <path
        d="M1.438 5.366l1.732 1a1 1 0 101-1.732l-1.732-1a1 1 0 10-1 1.732z"
        opacity=".5"
      />
      <path
        d="M12.83 6.366l1.732-1a1 1 0 00-1-1.732l-1.732 1a1 1 0 001 1.732z"
        opacity=".85"
      />
      <path
        d="M2.438 12.366l1.732-1a1 1 0 10-1-1.732l-1.732 1a1 1 0 101 1.732z"
        opacity=".4"
      />
      <path
        d="M11.366 4.17l1-1.732a1 1 0 00-1.732-1l-1 1.732a1 1 0 001.732 1z"
        opacity=".75"
      />
      <path
        d="M5.366 14.562l1-1.732a1 1 0 10-1.732-1l-1 1.732a1 1 0 001.732 1z"
        opacity=".35"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`BpkSpinner should render correctly with type as primary 1`] = `
<DocumentFragment>
  <div
    class="bpk-spinner bpk-spinner--primary"
  >
    <svg
      aria-hidden="true"
      style="width: 1rem; height: 1rem;"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 7H1a1 1 0 000 2h2a1 1 0 000-2z"
        opacity=".45"
      />
      <path
        d="M15 7h-2a1 1 0 100 2h2a1 1 0 100-2z"
      />
      <path
        d="M7 13v2a1 1 0 102 0v-2a1 1 0 10-2 0z"
        opacity=".3"
      />
      <path
        d="M7 1v2a1 1 0 002 0V1a1 1 0 00-2 0z"
        opacity=".65"
      />
      <path
        d="M9.634 12.83l1 1.732a1 1 0 101.732-1l-1-1.732a1 1 0 00-1.732 1z"
        opacity=".25"
      />
      <path
        d="M3.634 2.438l1 1.732a1 1 0 101.732-1l-1-1.732a1 1 0 10-1.732 1z"
        opacity=".55"
      />
      <path
        d="M11.83 11.366l1.732 1a1 1 0 101-1.732l-1.732-1a1 1 0 10-1 1.732z"
        opacity=".2"
      />
      <path
        d="M1.438 5.366l1.732 1a1 1 0 101-1.732l-1.732-1a1 1 0 10-1 1.732z"
        opacity=".5"
      />
      <path
        d="M12.83 6.366l1.732-1a1 1 0 00-1-1.732l-1.732 1a1 1 0 001 1.732z"
        opacity=".85"
      />
      <path
        d="M2.438 12.366l1.732-1a1 1 0 10-1-1.732l-1.732 1a1 1 0 101 1.732z"
        opacity=".4"
      />
      <path
        d="M11.366 4.17l1-1.732a1 1 0 00-1.732-1l-1 1.732a1 1 0 001.732 1z"
        opacity=".75"
      />
      <path
        d="M5.366 14.562l1-1.732a1 1 0 10-1.732-1l-1 1.732a1 1 0 001.732 1z"
        opacity=".35"
      />
    </svg>
  </div>
</DocumentFragment>
`;
